# Minecraft-API

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  swagger.yaml
.github/workflows/: constraints.txt  tests.yml
alembic/: env.py
alembic/versions/: d4867f3a4c0a_first_revision.py
app/: backend_pre_start.py  main.py  settings.py  tags.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: images.py  info.py  mojang.py  render.py  server.py
app/api/routes/: api.py  images.py  info.py  mojang.py  render.py  server.py
app/core/: config.py  rate_limit.py  security.py  tags.py
app/crud/: __init__.py  base.py
app/db/: base.py  base_class.py  init_db.py
app/models/: info.py  mojang.py
app/routers/: __init__.py  images.py  info.py  mojang.py  render.py  server.py
app/schemas/: __init__.py  info.py  mojang.py
swagger_server/: __main__.py
swagger_server/controllers/: images_controller.py  info_controller.py  mojang_controller.py  render_controller.py  server_controller.py  servertracking_controller.py
swagger_server/models/: __init__.py  inline_response200.py  inline_response2001.py  inline_response2002.py  inline_response2003.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_images_controller.py  test_info_controller.py  test_mojang_controller.py  test_render_controller.py  test_server_controller.py  test_servertracking_controller.py
