[tool.poetry]
authors = ["Leon Bowie <leon@bowie-co.nz>"]
description = ""
license = "AGPLv3"
name = "minecraft-api"
version = "1.0.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
databases = "^0.4.0"
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
pydantic = "^1.7.1"
python = "^3.7"
uvicorn = "^0.12.2"
Pillow = "^8.0.1"
aiofiles = "^0.6.0"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
safety = "^1.9.0"
typeguard = "^2.10.0"
pytest-asyncio = "^0.14.0"
nox = "^2020.8.22"
nox-poetry = "^0.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]
