[tool.poetry]
authors = ["Leon Bowie <leon@bowie-co.nz>"]
description = ""
license = "AGPLv3"
name = "Minecraft API"
version = "1.0.1"

[tool.poetry.dependencies]
Pillow = "^8.0.1"
aiomcstats = "^0.1.3"
minecraft-data = "^2.70.1"
tqdm = "^4.61.2"
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.65.2"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
asyncpg = "^0.22.0"
httpx = "^0.18.1"
SQLAlchemy = "^1.4.5"
sentry-sdk = "^1.3.0"
email-validator = "^1.0.5"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
sqlalchemy-stubs = "^0.3"
pytest-asyncio = "^0.14.0"
nox = "^2021.6.12"
coverage = {extras = ["toml"], version = "^5.5"}
darglint = "^1.8.0"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.2.3"
nox-poetry = "^0.8.5"
pep8-naming = "^0.11.1"
pre-commit = "^2.13.0"
pre-commit-hooks = "^4.0.1"
pytest = "^6.2.4"
recommonmark = "^0.7.1"
reorder-python-imports = "^2.5.0"
safety = "^1.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]
